<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.search.SearchActivity">

    <LinearLayout
            android:id="@+id/root_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

        <android.support.v7.widget.CardView
                android:id="@+id/card_view_origin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="12dp"
                card_view:cardElevation="2dp"
                card_view:contentPadding="4dp">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                <TextView
                        android:id="@+id/txt_search_origin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/origin"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                <EditText
                        android:id="@+id/edit_text_search_origin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:hint="@string/airport_search_hint1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txt_search_origin"/>

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
                android:id="@+id/card_view_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="12dp"
                android:layout_marginTop="8dp"
                card_view:cardElevation="2dp"
                card_view:contentPadding="4dp">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                <TextView
                        android:id="@+id/txt_search_destination"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/destination"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                <EditText
                        android:id="@+id/edit_text_search_destination"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:hint="@string/airport_search_hint2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txt_search_destination"/>

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
                android:id="@+id/card_view_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="12dp"
                android:layout_marginTop="8dp"
                card_view:cardElevation="2dp"
                app:contentPaddingTop="4dp"
                app:contentPaddingLeft="4dp"
                app:contentPaddingRight="4dp">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                <TextView
                        android:id="@+id/txt_search_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:maxLines="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                <CalendarView
                        android:id="@+id/calendar_view_search_calendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txt_search_date"/>

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <Button
                android:id="@+id/btn_search_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:layout_marginTop="8dp"
                android:text="@string/search"/>

    </LinearLayout>
</ScrollView>